manifest/frontend-proxy/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-proxy
  labels:
    app.kubernetes.io/name: frontend-proxy
    app.kubernetes.io/part-of: astronomy-shop
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: frontend-proxy
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cart
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: checkout
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: product-catalog
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: payment
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: recommendation
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: currency
      ports:
        - protocol: TCP
          port: 7001
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: image-provider
      ports:
        - protocol: TCP
          port: 8081
